# bowtie

./: .editorconfig  .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .non-pre-commit-ci.yaml  .non-pre-commit-config.yaml  .pre-commit-config.yaml  .prettierrc.json  .readthedocs.yaml  CONTRIBUTING.md  HARNESS_MIGRATION.rst  LICENSE  README.rst  action.yml  bowtie.sln  checkstyle-config.xml  endpoint.json  hatch_build.py  hj  io-schema.json  noxfile.py  package-lock.json  pmd-ruleset.xml  pnpm-lock.yaml  pyproject.toml  requirements.txt  test-requirements.in  test-requirements.txt  test.json
.devcontainer/: .codespace.Dockerfile  Containerfile  devcontainer.json
.devcontainer/gitpod/: Containerfile
.github/: FUNDING.yml  SECURITY.md  dependabot.yml  issue_template.md  pull_request_template.md
.github/workflows/: benchmark.yml  build-frontend.yml  ci.yml  dependabot-merge.yml  deploy-frontend.yml  documentation-links.yml  harness-ci.yml  harness-report.yml  images.yml  jsu.yml  lint.yml  report.yml  ui.yml  versioned-images.yml  versioned-report.yml
.pre-commit-hooks/: check-dependabot  check-lintsonschema-schema
bowtie/: __init__.py  __main__.py  _benchmarks.py  _cli.py  _commands.py  _connectables.py  _containers.py  _core.py  _direct_connectable.py  _ls.py  _python.py  _registry.py  _report.py  _smoke.py  _suite.py  _tui.py  exceptions.py  functions.js  hypothesis.py  utilclasses.js
bowtie/benchmarks/: contains.py  draft2020_metaschema.json  draft2020_metaschema.py  nested_schemas.py  openapi_spec_schema.json  useless_keywords.py
bowtie/report/: README.md  package-lock.json  package.json  utilclasses.js
bowtie/schemas/: benchmark_report.json  benchmarks.json  connectables.json  implementation-matrix-versions.json  implementation_matrix_versions.json  io-schema.json  io.json  public-implementations.json  report.json
bowtie/template/: report.html.j2
bowtie/templates/: aaaaa.json  data.json  dummy_report.html.j2  migrate-report.html  report.html.j2
bowtie/tests/: conftest.py  miniatures.py  test_benchmarks.py  test_cli.py  test_connectables.py  test_dialect.py  test_github.py  test_hypothesis.py  test_implementation.py  test_info_versions.py  test_integration.py  test_report.py  test_schemas.py  test_smoke.py  test_suite.py  test_tui.py
build-hooks/: implementations_metadata.py
data/: dialects.json
docs/: cli.rst  conf.py  contributing.rst  examples.txt  gh-action.rst  github-actions.rst  gitpod-motd.txt  implementers.rst  index.rst  interfaces.rst  motd.txt  requirements.in  requirements.txt  spelling-wordlist.txt  spelling_wordlist.txt
frontend/: .eslintrc.js  components.json  eslint.config.ts  index.html  jest.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: a11y.spec.ts  notFound.spec.ts
frontend/public/: index.html
frontend/src/: App.js  App.jsx  App.svelte  BenchmarkReportView.tsx  BenchmarkReportViewDataHandler.tsx  DialectReportView.tsx  DialectReportViewDataHandler.tsx  MainContainer.jsx  MainContainer.tsx  ReportDataHandler.js  ReportDataHandler.jsx  ReportDataHandler.tsx  ReportView.jsx  ReportView.tsx  global.css  index.js  index.jsx  index.tsx  main.ts
implementations/: .java-implementations-pmd-ruleset.xml  java-implementations-pmd-ruleset.xml
implementations/c-jsu/: Dockerfile  README.md  bowtie_jsu_compile.py
implementations/clojure-json-schema/: Dockerfile  project.clj
implementations/clojure-m3/: Dockerfile  project.clj
implementations/clojurescript-m3/: Dockerfile
implementations/cpp-blaze/: CMakeLists.txt  Dockerfile  bowtie_blaze.cpp
implementations/cpp-iris/: CMakeLists.txt  Dockerfile  bowtie_iris.cpp
implementations/cpp-jsoncons/: CMakeLists.txt  Dockerfile  bowtie_jsoncons.cpp  vcpkg.json
implementations/cpp-jsontoolkit/: Dockerfile  bowtie_jsontoolkit.cpp
implementations/cpp-valijson/: .dockerignore  .gitignore  Dockerfile  bowtie_valijson.cpp  compile_flags.txt
implementations/dotnet-corvus-jsonschema/: Dockerfile  Program.cs  bowtie_corvus_jsonschema.csproj  packages.lock.json  stylecop.json
implementations/dotnet-corvus-jsonschema-v4engine/: Dockerfile  Program.cs  bowtie_corvus_jsonschema_v4engine.csproj
implementations/dotnet-corvus-jsonschema-v5engine/: Dockerfile  Program.cs  bowtie_corvus_jsonschema_v5engine.csproj
implementations/dotnet-json-everything/: Dockerfile  Program.cs  bowtie_json_everything.csproj
implementations/dotnet-jsonschema-net/: .gitignore  Dockerfile  Program.cs  bowtie_json_everything.csproj
implementations/dotnet-newtonsoft-json-schema/: .clang-format  Dockerfile  Program.cs  bowtie_newtonsoft_json_schema.csproj
implementations/elixir-jsonschex/: .gitignore  Dockerfile  mix.exs
implementations/elixir-jsv/: .gitignore  Dockerfile  mix.exs  test.sh
implementations/go-gojsonschema/: Dockerfile  bowtie_gojsonschema.go  go.mod
implementations/go-jsonschema/: Dockerfile  bowtie_jsonschema.go  go.mod  go.sum
implementations/java-json-schema/: BowtieJsonSchema.java  Dockerfile  build.gradle  matrix-versions.json
implementations/java-json-schema-react/: Dockerfile  build.gradle
implementations/java-json-schema-validator/: BowtieJsonSchemaValidator.java  Dockerfile  build.gradle
implementations/java-json-tools-json-schema-validator/: BowtieJsonSchemaValidator.java  Dockerfile  build.gradle
implementations/java-jsonschema-validator/: BowtieJsonSchemaValidator.java  Dockerfile  bowtieJsonSchemaValidator.java  build.gradle
implementations/java-jsonschemafriend/: BowtieJsonSchemaFriend.java  Dockerfile  build.gradle
implementations/java-jsu/: Dockerfile  (+1 more)
implementations/rust-jsonschema/: Cargo.toml  Dockerfile  build.rs
implementations/rust-jsonschema/src/: main.rs
report/: package-lock.json  package.json
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_connectables.py  test_dialect.py  test_github.py  test_hypothesis.py  test_integration.py  test_registry.py  test_report.py  test_schemas.py
(+449 files in other folders)
