[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "implementations/",
]

[tool.hatch.build.force-include]
"bowtie/schemas/io-schema.json" = "bowtie/schemas/io-schema.json"
"bowtie/templates/" = "bowtie/templates/"

[project]
name = "bowtie-json-schema"
description = "A meta-validator for the JSON Schema specification."
requires-python = ">=3.10"
readme = "README.rst"
license = {text = "MIT"}
keywords = [
    "validation",
    "data validation",
    "jsonschema",
    "json",
    "json schema",
]
authors = [
  {email = "Julian+bowtie@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: File Formats :: JSON :: JSON Schema",
]
dynamic = ["version"]

dependencies = [
  "aiodocker",
  "attrs>=22.2.0",
  "click",
  "github3.py",
  "jinja2",
  "jsonschema",
  "rich",
  "structlog",
  "trogon>=0.4.0",
  "typing-extensions; python_version<'3.11'",
]

[project.scripts]
bowtie = "bowtie._cli:main"

[project.urls]
Documentation = "https://bowtie-json-schema.readthedocs.io/"
Homepage = "https://github.com/bowtie-json-schema/bowtie"
Issues = "https://github.com/bowtie-json-schema/bowtie/issues/"
Source = "https://github.com/bowtie-json-schema/bowtie"

[tool.coverage.run]
branch = true
source = ["bowtie"]
dynamic_context = "test_function"

[tool.djlint]
# H008: Single and double quotes don't mean the same thing in Jinja, so it's
#       not always the case that the latter should be used unfortunately.
# J018: url_for is a flask thing, not a Jinja2 native one.
ignore = "H008,J018"
indent = 2

[tool.doc8]
ignore = [
    "D000",  # see PyCQA/doc8#125
    "D001",  # one sentence per line, so max length doesn't make sense
]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
from_first = true
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[tool.pyright]
strict = ["**/*.py"]
exclude = [
    "**/tests/__init__.py",
    "**/tests/test_*.py",
]

[tool.ruff]
line-length = 79
target-version = "py38"
select = ["ANN", "B", "D", "D204", "E", "F", "Q", "SIM", "UP", "W"]
ignore = [
  # Wat, type annotations for self and cls, why is this a thing?
  "ANN101",
  "ANN102",
  # Private annotations are fine to leave out.
  "ANN202",
  # I don't know how to more properly annotate "pass along all arguments".
  "ANN401",
  # It's totally OK to call functions for default arguments.
  "B008",
  # raise SomeException(...) is fine.
  "B904",
  # It's fine to not have docstrings for magic methods.
  "D105",
  # __init__ especially doesn't need a docstring
  "D107",
  # This rule makes diffs uglier when expanding docstrings (and it's uglier)
  "D200",
  # No blank lines before docstrings.
  "D203",
  # Start docstrings on the second line.
  "D212",
  # This rule misses sassy docstrings ending with ! or ?.
  "D400",
  # This rule is too flaky.
  "D401",
  # Section headers should end with a colon not a newline
  "D406",
  # Underlines aren't needed
  "D407",
  # Plz spaces after section headers
  "D412",
  # We support 3.8 and 3.9
  "UP006",
  "UP007",
]
extend-exclude = ["json"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"docs/*" = ["ANN", "D"]
"noxfile.py" = ["ANN", "D"]
"tests/*" = ["ANN", "D"]
"implementations/*" = ["ANN", "D"]
"bowtie/schemas/__init__.py" = ["D"]
